Виконана розмітка форми підписка у футері, та розмітка заявки в модальному вікні.

--- a/portfolio.html
+++ b/portfolio.html
@@ -295,6 +295,20 @@
               </li>
             </ul>
           </div>
+          <div class="container-subscribe">
+            <h3 class="title">Подпишитесь на рассылку</h3>
+            <form action="#" name="subscribe">
+              <label>
+                <input type="mail" name="mail" placeholder="E-mail" />
+              </label>
+              <button class="submit-button" type="submit">
+                Подписаться
+                <svg class="send" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
