--- a/index.html
+++ b/index.html
@@ -524,6 +524,20 @@
               </li>
             </ul>
           </div>
+          <div class="container-subscribe">
+            <h3 class="title">Подпишитесь на рассылку</h3>
+            <form action="#" name="subscribe">
+              <label>
+                <input type="mail" name="mail" placeholder="E-mail" />
+              </label>
+              <button class="submit-button" type="submit">
+                Подписаться
+                <svg class="send" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -534,6 +548,54 @@
             <use href="./images/icons.svg#icon-close-button"></use>
           </svg>
         </button>
+        <form class="order-form" name="order-form" action="#">
+          <div
+            class="order-form-content"
+            role="group"
+            aria-labelledby="order-form-head"
+          >
+            <p id="order-form-head" class="order-form-head">
+              Оставьте свои данные, мы вам перезвоним
+            </p>
+            <div class="input-container">
+              <label for="name"> Имя </label>
+              <input type="text" name="name" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-person"></use>
+              </svg>
+            </div>
+            <div class="input-container">
+              <label for="telephone"> Телефон </label>
+              <input type="tel" name="telephone" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-phone"></use>
+              </svg>
+            </div>
+            <div class="input-container">
+              <label for="email"> Почта </label>
+              <input type="email" name="email" />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modal-email"></use>
+              </svg>
+            </div>
+            <div class="input-container">
+              <label for="comment"> Комментарий </label>
+              <textarea name="comment" placeholder="Введите текст"></textarea>
+            </div>
+            <div class="checkbox-container">
+              <label>
+                <input type="checkbox" name="aggrement" />
+                <div class="checkmark-box"></div>
+                <svg class="checkmark-check" width="16" height="15">
+                  <use href="./images/icons.svg#icon-checkbox-check"></use>
+                </svg>
+                Соглашаюсь с рассылкой и принимаю&nbsp;
+                <a href="#" class="aggrement-condition">Условия договора</a>
+              </label>
+            </div>
+            <button class="submit-button" type="submit">Отправить</button>
+          </div>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
